--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,22 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.Dark">
+
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
+        <service
+            android:name="com.freezyoff.kosan.subscriber.server.ServerService"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity
             android:name=".ui.LoginActivity"
             android:label="@string/title_activity_login">
@@ -24,9 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity" />
-
-        <service android:name="org.eclipse.paho.android.service.MqttService" />
+        <activity android:name=".ui.DashboardActivity" />
+        <activity android:name=".ui.AuthenticateActivity" />
     </application>
 
 </manifest>
